Fix for wide subbar on mobile that was causing problems.

--- a/system/cms/themes/pyrocms/css/workless.css
+++ b/system/cms/themes/pyrocms/css/workless.css
@@ -1379,7 +1379,6 @@ Primary styles. (Mobile first, everything else is overridden with @media queries
 	top: 25px!important;
 	right: 0;
 	left: 0;
-	width: 100%;
 	height: 30px;
 	background: #f7f7f7;
   	background-repeat: repeat-x;
